--- a/index.html
+++ b/index.html
@@ -4,8 +4,33 @@
   <head>
     <meta charset="utf-8">
     <title>Shivam's Bomb Home Gym</title>
+    <link href="css/index.css" rel="stylesheet">
   </head>
   <body>
-    <container>
+    <header>
+      <h1>Shivam's Bomb Gym</h1>
+    </header>
+    <main>
+      <div class="container">
+        <h2>About Me</h2>
+        <p>sfasfadsfasfsdfsa</p>
+      </div>
+      <div class="container">
+        <h2>Mission</h2>
+        <p>sfasfadsfasfsdfsa</p>
+      </div>
+      <div class="container">
+        <h2>Contact</h2>
+        <p>sfasfadsfasfsdfsa</p>
+      </div>
+    
+    </main>
+    <footer>
+      <ul>
+      <li>Shivam Sukhwal</li>
+      <li>Phone Number</li>
+      <li>email</li>
+      </ul>
+    </footer>
   </body>
 </html>
